# netgit

./: README.md  pyproject.toml
src/netgit/: __init__.py  cli.py
